addons/ingress-nginx-controller/workload/test-inggress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  ingressClassName: nginx-external
  rules:
  - http:
      paths:
      - backend:
          service:
            name: test-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-svc
  name: test-svc
spec:
  ports:
  - name: 8080-80
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: nginx
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  containers:
    - image: nginx
      name: nginx-con
      ports:
      - containerPort: 80
        name: http
